# thesis_uv

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
player_detection_model/: main.py
player_detection_model/Training_notebooks/: training.ipynb
player_detection_model/team_assigner/: __init__.py  team_assigner.py
player_detection_model/trackers/: tracker.py
player_detection_model/video_utils/: __init__.py  video_utils.py
