[project]
name = "thesis-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "more-itertools>=10.8.0",
    "opencv-python>=4.12.0.88",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "supervision>=0.26.1",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "ultralytics>=8.3.194",
    "umap-learn>=0.5.9.post2",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
